# case-study-intella

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BAUPLAN_PIPELINE_INTEGRATION.md  CLAUDE.md  Justfile  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/bauplan-reference/: bauplan_cli.md
.claude/skills/new-pipeline/: examples.md
case_study_telemetry/: __init__.py  config.py
case_study_telemetry/flows/: __init__.py  wap_telemetry_flow.py
case_study_telemetry/models/: __init__.py  telemetry.py
case_study_telemetry/quality/: __init__.py  telemetry_checks.py
case_study_telemetry/tasks/: __init__.py  audit_tasks.py  branch_tasks.py  ingestion_tasks.py  publish_tasks.py  transformation_tasks.py
docker/: Dockerfile  Dockerfile.server
pipelines/: README.md
pipelines/telemetry_bronze_to_silver/: README.md  bauplan_project.yml  models.py
scripts/: deploy_flow.py
tests/: __init__.py  test_version.py
