[project]
name = "case-study-telemetry"
version = "0.1.0"
description = "Demo project showcasing Bauplan's data engineering capabilities for ETL pipelines using the WAP pattern - Intella telemetry case study"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bauplan>=0.0.3a509",
    "duckdb>=1.4.4",
    "polars>=1.37.1",
    "prefect>=3.0.0",
    "pydantic-settings>=2.0.0",
]


[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "prek>=0.3.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]              # Allow unused imports in __init__.py
"tests/**/*.py" = ["S101"]            # Allow assert statements in tests
"pipelines/**/models.py" = ["B008"]   # Allow bauplan.Model() in function defaults

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=case_study_telemetry",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
branch = true
source = ["case_study_telemetry"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
